--- a/src/assets/conteudoProgramatico.example
+++ b/src/assets/conteudoProgramatico.example
@@ -1,20 +1,20 @@
-Aula 01 - Plano de Ensino, apresentação do professor e da turma, breve histórico da internet, Web 2.0 e futuro
-Aula 02 - Fundamentos da Web, Protocolos e Introdução ao REST
-Aula 03 - Front-end: HTML e CSS
-Aula 04 - Front-end: JavaScript, JavaScript Moderno e AJAX
-Aula 05 - Introdução ao Node.js + NPM, ferramentas de desenvolvimento e Github
-Aula 06 - Reposição no Sábado - Front-end - Exercícios relacionados (28/03)
-Aula 07 - Frameworks de Interação (React, Vue.js e Angular) I
-Aula 08 - Frameworks de Interação (React, Vue.js e Angular) II
-Aula 09 - N1 - Avaliação - Fundamentos da Web e Front-end
-Aula 10 - Produção Supervisionada - Projeto
-Aula 11 - Apresentação Projeto - Parte 1
-Aula 12 - Introdução básica ao Linux e Servidores HTTP (Apache e NGINX)
-Aula 13 - Backend para Web: Introdução ao PHP
-Aula 14 - Reposição no Sábado - Projeto - Produção supervisionada (16/05)
-Aula 15 - Frameworks PHP (Slim, CakePHP e Laravel)
-Aula 16 - Semana SETE
-Aula 17 - Webservices (REST) com PHP
-Aula 18 - Apresentação e Entrega Final Projeto - Parte 2
-Aula 19 - N2 - Avaliação - Servidores HTTP, PHP e Webservices (REST)
-Aula 20 - Avaliação N - 1 (04/07)
+Aula 01 - Restart
+Aula 02 - Plano de Ensino, apresentação do professor e da turma, breve histórico da internet, Web 2.0 e futuro
+Aula 03 - Fundamentos da Web, Protocolos e Introdução ao REST
+Aula 04 - Front-end: HTML e CSS
+Aula 05 - Front-end: Javascript, DOM e AJAX - Parte I
+Aula 06 - Front-end: Javascript, DOM e AJAX - Parte II
+Aula 07 - Introdução ao Node.js + NPM, ferramentas de desenvolvimento e Github
+Aula 08 - Frameworks de Interação (React, Vue.js e Angular) - Parte I
+Aula 09 - Frameworks de Interação (React, Vue.js e Angular) - Parte II
+Aula 10 - ABP - Apresentação Projeto - Parte 1
+Aula 11 - N1 - Fundamentos da Web e Front-end
+Aula 12 - Servidores HTTP (Apache e NGINX)
+Aula 13 - Back-end para Web: Introdução ao PHP
+Aula 14 - Back-end para Web: Frameworks de PHP - Parte I
+Aula 15 - Back-end para Web: Frameworks de PHP - Parte II
+Aula 16 - Back-end para Web: Webservices (REST) com PHP
+Aula 17 - Produção Supervisionada - ABP
+Aula 18 - N2 - Servidores HTTP e Back-end
+Aula 19 - ABP - Apresentação e Entrega Final Projeto - Parte 2
+Aula 20 - Avaliação N-1 (06/07)
